# CitrumRender

./: .clang-format  .gitignore  CMakeLists.txt  data.cpp  data.h  main.cpp  shader.cpp  shader.h
shaders/fs/: shader.fs
shaders/vs/: shader.vs
src/: CMakeLists.txt  main.cpp
src/core/: Application.cpp  Application.h  CMakeLists.txt  LayerStack.cpp  Log.h  PlatformDetection.h  Window.cpp
src/core/events/: Events.h  MouseEvents.h
src/core/imgui/: ImGuiLayer.cpp  ImGuiLayer.h  theme.h
src/core/include/core/: Layer.h  LayerStack.h  Timer.h  Timestep.h  Window.h  tools.h
src/core/include/core/events/: ApplicationEvents.h  KeyEvents.h
src/core/src/: Layer.cpp  Log.cpp
src/core/terminal/: terminal_commands.cpp  terminal_commands.h
src/editor/: CMakeLists.txt
src/editor/include/editor/: Application.h  ImgGuiLayer.h  Layer.h  LayerStack.h  Window.h  tools.h
src/editor/include/editor/events/: ApplicationEvents.h  Event.h  KeyEvents.h  MouseEvents.h
src/editor/include/editor/imgui/: ImGuiLayer.h
src/editor/src/: ImGuiLayer.cpp  ImgGuiLayer.cpp  Layer.cpp  LayerStack.cpp
src/platform/: CMakeLists.txt
src/platform/graphics/opengl/: OpenGLAPI.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLUniformBuffer.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
src/platform/include/platform/graphics/opengl/: OpenGLAPI.h  OpenGLContext.h  OpenGLFramebuffer.h
src/platform/os/general/: GlfwTools.h  GlfwWindow.cpp  GlfwWindow.h
src/platform/os/windows/: WindowsWindow.h
src/platform/src/: GlfwTools.cpp  OpenGLBuffer.cpp  OpenGLFramebuffer.cpp  OpenGLShader.cpp  OpenGLUniformBuffer.cpp
src/renderer/: Buffer.cpp  CMakeLists.txt  Framebuffer.cpp  RHI.cpp  RHI.h
src/renderer/include/renderer/: Buffer.h  Framebuffer.h  GraphicsContext.h  VertexArray.h
src/renderer/src/: GraphicsContext.cpp  VertexArray.cpp
src/runtime/model/: CMakeLists.txt  mesh.cpp  mesh.h  model.cpp
src/runtime/model/include/model/: mesh.h  model.h
src/runtime/model/src/: mesh.cpp  model.cpp
src/shaders/fs/: application.fs  cubemap.fs  light.fs  normmap.fs  shader.fs
src/shaders/vs/: application.vs  cubemap.vs  normmap.vs  shader.vs
src/utils/: CMakeLists.txt  buffer.cpp  buffer.h  camera.cpp  cubemap.h  data.cpp  data.h  definedata.h  shader.cpp  shader.h  texture.cpp  vertexArray.cpp  vertexArray.h
src/utils/include/: camera.h  data.h  shader.h  texture.h  todo.h
src/utils/include/utils/: buffer.h  camera.h  definedata.h  texture.h  todo.h  vertexArray.h
src/utils/src/: buffer.cpp  camera.cpp  cubemap.cpp  data.cpp  shader.cpp  texture.cpp  vertexArray.cpp
test/: CMakeLists.txt
utils/: CMakeLists.txt  data.cpp  shader.cpp
utils/include/: data.h  shader.h  todo.h
